<resources>
    <string name="app_name">WeatherBot</string>
    <string name="voiceButton">SAY</string>
    <string name="title_activity_main">WeatherBot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_voice">Voice Assistant</string>
    <string name="title_weather">History</string>
    <string name="action_setting">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Pere-Pau</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_last_location">Last Location</string>
    <string name="pref_default_location">Barcelona</string>
    <string name="weather_city">Barcelona</string>
    <string name="weather_temp">25 C</string>
    <string name="temp">Temp</string>
    <string name="humidity">Humidity</string>
    <string name="weather_humidity">88%</string>
    <string name="sample_hour">11:11</string>
    <string name="voiceAssistant">Voice Assistant</string>
    <string name="history">History</string>
    <string name="todolist_title">To-Do List</string>
    <string name="calendar">Calendar</string>
    <string name="date">27/09/2019 11:11</string>
    <string name="query_sample">Tell me the weather in Barcelona</string>
    <string name="clearHistory">Clear History</string>
    <string name="clearHistoryButton">Clear History</string>
    <string name="clearHistoryWarning">This action deletes all your weather history</string>
    <string name="dayOfWeek">Now</string>
    <string name="nextDayWeather">Next Day Weathers [2-5]</string>
    <string name="nextDayWeatherSummary">Retrieves the number of weather when asked for next day weathers</string>
    <string name="todolist_sample">Llevar el coche al taller</string>
    <string name="view_all">View All</string>
    <string name="task_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua
    </string>
    <string name="todolist">To Do List</string>
    <string name="weatherCondition">Sunny</string>
    <string name="city">City:</string>
    <string name="tempAcronym">Temperature:</string>
    <string name="humidityAcronym">Humidity:</string>
    <string name="city_sample">Barcelona</string>
    <string name="temp_sample">24.2º</string>
    <string name="humidity_sample">72.0%</string>
    <string name="poweredby">Powered By</string>
    <string name="lastQuery">Last query:</string>

</resources>
