<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.WeatherInfoActivity"
        android:orientation="vertical">
    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/weather_toolbar"/>
    <TextView
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="18sp"
            android:textStyle="italic"
            android:padding="5dp"/>
    <TextView
            android:text="@string/query_sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp"
            android:textStyle="italic"
            android:padding="5dp"/>

    <TextView
            android:text="@string/city_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:id="@+id/textView5"
            android:layout_marginLeft="5dp"
            android:textColor="@color/primary_text"
            android:layout_gravity="center"/>

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/sunny"
            android:id="@+id/imageView"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>
    <TextView
            android:text="@string/weatherCondition"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                    android:text="@string/temp_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="65sp"
                    android:textColor="@color/primary_text"
                    android:id="@+id/textView7"
                    android:layout_gravity="center"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp">
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/umbrella"
                    android:id="@+id/imageView2"/>
            <TextView
                    android:text="@string/humidity_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:id="@+id/textView9"
                    android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp">
            <TextView
                    android:text="@string/poweredby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/primary_text"
                    android:id="@+id/textView10"
                    android:layout_gravity="center_horizontal"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/openweathermap"
                    android:id="@+id/imageView4"
                    android:layout_gravity="bottom"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>