<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/query_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weather_historial_query"
                    android:layout_weight="1"
                    android:textStyle="italic"
                    android:layout_marginLeft="5dp"/>
        </LinearLayout>


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">
                <ImageView
                        android:id="@+id/weather_historial_pic"
                        android:layout_width="60dp"
                        android:layout_height="60sp"
                        app:srcCompat="@drawable/sunny"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"/>
                <TextView
                        android:id="@+id/clima_historial_text"
                        android:text="Sunny"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/weather_historial_pic"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_marginBottom="10dp"/>
            </RelativeLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_marginLeft="10dp">
                <TextView
                        android:id="@+id/dayOfWeek_historial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dayOfWeek"
                        android:textSize="12sp"
                        android:layout_marginTop="5dp"/>
                <TextView
                        android:text="@string/weather_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/weather_historial_city"
                        android:textSize="20sp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                        <TextView
                                android:text="@string/temp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:text="@string/weather_temp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/weather_historial_temp"
                                android:textSize="18sp"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp">
                        <TextView
                                android:text="@string/humidity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView4"/>
                        <TextView
                                android:text="@string/weather_humidity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/weather_historial_humidity"
                                android:textSize="18sp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                    <TextView
                            android:text="@string/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/weather_historial_time"
                            android:textStyle="italic"
                            android:layout_marginBottom="5dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>



    </android.support.v7.widget.CardView>

